[project]
name = "lliv"
version = "0.0.1"
authors = [
  {name = "Meow King", email = "mr.meowking@anche.no"},
]
dependencies = [
    "llvmpym"
]

[project.scripts]
lliv = "lliv.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lliv"]


